// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Numeric has a helptext 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control"
      name="numericField"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="form-text"
    >
      Type something
    </span>
    <span
      class="sr-only"
      id="numericField_fieldDetails"
    >
      Type something
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Numeric has a key 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control"
      name="numericField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Numeric has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
  >
    <label
      aria-describedby="numericField_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      label
    </label>
    <input
      class="form-control"
      name="numericField"
      type="text"
      value=""
    />
    <span
      class="sr-only"
      id="numericField_fieldDetails"
    >
      label
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Numeric has a placeholder 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control"
      name="numericField"
      placeholder="Placeholder"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Numeric has a value 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control"
      name="numericField"
      type="text"
      value="123"
    />
    
  </div>
</div>
`;

exports[`Field Numeric has an id 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control"
      id="ID"
      name="numericField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Numeric is not readOnly 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control"
      name="numericField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Numeric is not required 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control"
      name="numericField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;

exports[`Field Numeric renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
  >
    <label
      aria-describedby="numericField_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      Numeric Field
    </label>
    <input
      class="form-control"
      name="numericField"
      type="text"
      value=""
    />
    <span
      class="sr-only"
      id="numericField_fieldDetails"
    >
      Numeric Field
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Numeric renders the default markup 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control"
      name="numericField"
      type="text"
      value=""
    />
    
  </div>
</div>
`;
